<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_chatbot"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chatbot" />
    <item
        android:id="@+id/nav_status"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_status" />
    <item
        android:id="@+id/nav_entretien"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_entretien" />
    <item
        android:id="@+id/nav_decrets"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_decrets" />
</menu>
